attempt fix app off center

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,7 +8,8 @@ element.style {
   display: flex;
   text-align: center;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  /* justify-content: space-evenly; */
+  justify-content: center;
 }
 
 .wrapper button {
